OR-1732 fix scrollbar in calendar view

--- a/modules/linagora.esn.calendar/frontend/css/calendar-view.less
+++ b/modules/linagora.esn.calendar/frontend/css/calendar-view.less
@@ -10,6 +10,10 @@
     min-width: 300px;
   }
 
+  .fc {
+    margin-bottom: 0;
+  }
+
   .calendar-left-pane {
     .card-header {
       padding: 0;
